<resources>
    <!-- Action Bar-->
    <string name="app_name">Brunel Planner</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_change_view">Change View</string>
    <string name="action_change_week">Change Week</string>
    <string name="action_reset_week">Change Week</string>

    <!-- Misc -->
    <string name="text_student_id">Student ID</string>
    <string name="text_student_password">Password</string>
    <string name="button_login">Login</string>
    <string name="title_activity_maps">Map</string>

    <!-- Drawer -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_timetable">Timetable</string>
    <string name="nav_drawer_modules">Modules</string>
    <string name="nav_drawer_buildings">Buildings</string>
    <string name="nav_drawer_custom_events">Custom Events</string>
    <string name="nav_drawer_notes">Notes</string>
    <string name="nav_drawer_help">Help</string>
    <string name="nav_drawer_about">About</string>
    <string name="nav_drawer_settings">Settings</string>

    <!-- Help -->
    <string name="open_contact_fragment">Contact</string>
    <string name="open_faq_fragment">FAQ</string>
    <string name="faq_header">Frequently Asked Questions</string>

    <!-- About -->
    <string name="about_title">Brunel Planner Application  \n </string>
    <string name="about_devs">Name of Developers:</string>
    <string name="about_name_asha">Asha Parmar</string>
    <string name="about_name_orion">Orion Koteki</string>
    <string name="about_name_daniel">Daniel Gubala\n</string>
    <string name="about_name_manoj">Manoj Chandrakumar</string>
    <string name="about_name_cristian">Cristian Rosu</string>
    <string name="about_name_language">Language Used:</string>
    <string name="about_name_java">Java\n</string>
    <string name="about_name_description">Description:</string>
    <string name="about_name_descriptioninfo"> The Brunel Planner application is an app that allows students to keep
        track of their current timetable in a mobile friendly format.
        The app allows users to customise features to add specific events alongside saving any relevant
        details such as lecture notes.\n</string>
    <string name="about_name_version">Version Number:</string>
    <string name="about_name_versionnumber">1.0</string>
    <string name="about_name_license">License:</string>
    <string name="about_name_licensetype">GNU GPLv3\n</string>

    <!--Contact Form-->
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Email</string>

    <!-- FAQ -->
    <string name="faq_title">Frequently Asked Questions\n</string>
    <string name="faq_q1">\nWhat is Brunel Planner?\n</string>
    <string name="faq_a1">It is an app that allows students to keep track of their current timetable in a mobile friendly format. The app allows users to customise features to add specific events alongside saving any relevant details such as lecture notes. \n</string>
    <string name="faq_q2">Which platforms support Brunel Planner?\n</string>
    <string name="faq_a2">Brunel Planner supports Android. We plan to expand the platform to iPhone, iPad and Blackberry in the nearest future.\n</string>

    <!-- Settings -->
    <string name="settings_default_colour">Colour</string>
    <string name="settings_colour_prompt">Pick A Colour</string>
    <string name="settings_header_colour">Navigation Drawer Header Colour</string>
    <string name="settings_font_colour">Font Colour</string>
    <string name="settings_background_colour">Background Colour</string>
    <string name="settings_actionbar_colour">Action Bar Colour</string>
    <string name="settings_cards_colour">Cards Colour</string>
    <string name="settings_body_colour">Navigation Drawer Body Colour</string>
    <string name="settings_save">Save</string>

</resources>
