<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="g20.brunelplanner.views.activities.fragments.FAQFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp">

            <TextView
                android:id="@+id/faq_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq_header"
                android:textColor="@color/black"
                android:textStyle="normal|bold|italic"
                android:typeface="normal" />

            <TextView
                android:id="@+id/faq_q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/faq_title"
                android:text="@string/faq_q1"
                android:textColor="@color/black"
                android:textStyle="normal|bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/faq_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/faq_q1"
                android:text="@string/faq_a1"
                android:textColor="@color/black"
                android:typeface="normal" />

            <TextView
                android:id="@+id/faq_q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/faq_a1"
                android:text="@string/faq_q2"
                android:textColor="@color/black"
                android:textStyle="normal|bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/faq_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/faq_q2"
                android:text="@string/faq_a2"
                android:textColor="@color/black"
                android:typeface="normal" />

    </RelativeLayout>
    </ScrollView>

</FrameLayout>
