<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="g20.brunelplanner.views.activities.fragments.SettingsFragment">
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settings_header_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="@string/settings_header_colour"
        android:textAlignment="center" />

    <Button
        android:id="@+id/settings_header_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_colour_prompt"
        android:layout_below="@+id/settings_header_text_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/settings_body_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/settings_header_button"
        android:text="@string/settings_body_colour"
        android:textAlignment="center" />

    <Button
        android:id="@+id/settings_body_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_colour_prompt"
        android:layout_below="@+id/settings_body_text_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/settings_background_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/settings_body_button"
        android:text="@string/settings_background_colour"
        android:textAlignment="center" />

    <Button
        android:id="@+id/settings_background_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_colour_prompt"
        android:layout_below="@id/settings_background_text_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/settings_actionbar_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/settings_background_button"
        android:text="@string/settings_actionbar_colour"
        android:textAlignment="center" />

    <Button
        android:id="@+id/settings_actionbar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_colour_prompt"
        android:layout_below="@id/settings_actionbar_text_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/store_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/settings_actionbar_button"/>
</RelativeLayout>
</android.support.v4.widget.NestedScrollView>

</FrameLayout>
